# uzh-booker

./: .agent.md  README.md  create_config.py  debug_spot_selector.py  demo_refactored.py  manage_configs.py  pyproject.toml  pytest.ini  record_cassettes.py  test_current_config.py  test_multi_config.py  test_spot_selector_minimal.py
scheduler/: .env.example  amain.py  booking_main.py  config.py  config_loader.py  main.py  spot_fetcher.py
tests/: test_amain.py
tests/cassettes/: .gitkeep  authentication_flow.yaml  single_booking_attempt.yaml  spam_booking_session.yaml
