[project]
name = "scheduler"
version = "0.1.0"
description = "UZH booking system with async spam booking strategy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1",
    "pyotp>=2.9.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-vcr>=1.0.2",
    "requests>=2.32.3",
    "respx>=0.22.0",
    "rich>=14.0.0",
    "vcrpy>=5.1.0",
]

[project.scripts]
# Legacy synchronous booking
book = "scheduler.main:main"

# Refactored async booking (recommended)
book-async = "scheduler.booking_main:main"
book-async-legacy = "scheduler.amain:main"
refresh-async = "scheduler.amain:reload_csrf_token"

# Demo and utilities
record-cassettes = "record_cassettes:main"
select-spots = "create_config:main"
manage-configs = "manage_configs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "types-requests>=2.32.0.20250328",
    "ipykernel>=6.29.5",
]

[tool.mypy]
exclude = ['.git', '.venv', '.history', '.*test_.*\.py']

strict = true

show_error_codes = true
warn_unreachable = true

warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true

no_implicit_reexport = true

cache_fine_grained = true
pretty = true
